--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:21.+'
     compile 'com.github.markushi:android-ui:1.2'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('C:/Users/YLion/AndroidStudioProjects/Random/libs/xmlpull_1_0_5.jar')
+    compile files('C:/Users/YLion/AndroidStudioProjects/Random/libs/Bmob_Push_V0.6beta_20150408.jar')
+    compile files('C:/Users/YLion/AndroidStudioProjects/Random/libs/BmobSDK_V3.3.5_0408.jar')
 }
